--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Hexadecimal para rgba()</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.css">
 
 </head>
 <body>
@@ -49,6 +49,7 @@
         </code></pre>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script>
-    
 </body>
 </html>
+
+
